# polya-gamma-tf

./: README.md  algo2.py  pyproject.toml
pgtf/: devroye.py  gammasum.py  inverse_gaussian.py
