[tool.poetry]
name = "polya-gamma-tf"
version = "v0.1.0"
description = "Sample from the Polya-Gamma distribution using TensorFlow"
authors = ["ninpnin <vainoyrjanainen@icloud.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "pgtf", from = "" }
]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "*"
tensorflow_probability = "*"

[tool.poetry.dev-dependencies]
devtools = "^0.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
